MOSIP-32454: Changed spring versions and run.bat script Signed-off-by: HimajaDhanyamraju2 <dhanyamraju.himaja2@mindtree.com>